2015-02-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_search.php: Fixed
	bug #1839.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/invoices/invoice_template.php: Added
	new 'Invoice expiration date'.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/invoices/invoices.php: Ticket 
	#1843.

	* extras/mr/18.sql: Added file.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/audit.php
	  include/export_csv.php
	  operation/inventories/manage_objects.php: Fixed ticket 
	#1704.

	* images/resolution_disabled.png: Added image.

2015-03-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_workunits.php: Now the function
	"create_workunit" returns the created workunit id on success.
	
	* operation/incidents/incident_dashboard_detail.php: Now
	the workunits created inside tickets are called comments.
	
	* operation/incidents/incident_workunits.php: Now the comments
	are added via ajax. Ticket #1759.

2015-02-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_db.php
	  include/functions_workunits.php: Fixed ticket #1628.

2015-02-25  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/kb/download/browse.php: Fixed bug creating
	file releases.

2015-02-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/kb/manage_data.php: Fixed bug deleting
	files.

2015-02-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/kb/manage_data.php: Fixed bug #1826.

2015-02-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_inventories.php
	  operation/inventories/manage_objects.php: Added form for
	editing external tables.

	* operation/inventories/manage_external_tables.php: Added file.

2015-02-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  include/functions_inventories.php
	  include/ajax/inventories.php
	  include/js/integria_inventory.js