@@ -1,3 +1,7 @@
+2015-03-24  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/functions_user.php: Fixed bug importing users from csv.
+
 2015-02-04  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* operation/incidents/incident_search.php: Fixed
